--- a/Alain Nkouka/html/Langauefrancais.html
+++ b/Alain Nkouka/html/Langauefrancais.html
@@ -29,7 +29,7 @@
 
     <!-- lien Jquery-ui.min -->
 
-    <link rel="stylesheet" href="../css/parametreAnglais.css">
+    <link rel="stylesheet" href="../css/Languefrancais.css">
     <!-- lien css -->
 
 
@@ -125,28 +125,18 @@
                 <button class="btn btn-secondary " type="button" id="dropdownMenuButton" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     <img src="https://img.icons8.com/ios/50/000000/settings--v1.png" class="div5">
-                    <main class="paramètres">Settings</main>
+                    <main class="paramètres">Paramètres</main>
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="parametreduconde" href="parametreAnglais.html">Settings</a>
-                    <a class="dropdown-item" href="parametreFrancais.html">Français</a>
+                    <a class="parametreduconde" href="parametreAnglais.html">Paremètres</a>
+                    <a class="dropdown-item" href="anglaisFrancais.html">Anglais</a>
                     <a class="dropdown-item" href="indexFrancais.html">Disconnect</a>
                 </div>
             </div>
             <!-- Button Paramètres code bootstrap -->
 
-
-
-            <div class="dropdown">
-                <button class="btn btn-secondary " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                    <a href="#">
-                        <img src="https://img.icons8.com/ios/50/000000/place-marker--v3.png" class="div6">
-                        <main class="localisation">Location</main>
-                    </a>
-                </button>
-            </div>
-        </nav> <!-- Button Localisation code bootstrap -->
+            
+        </nav> 
     </header>
 
     <nav>
@@ -165,14 +155,17 @@
 
         <div class="parametres">
             <div class="info">
-                <div class="modifier"><a href="BlocageAnglais.html">Anglais</a></div>
+                <div class="modifier"><a href="langueAnglais.html">Anglais</a></div>
                 </a>
                 <div class="info">
                     <div class="modifier"><a href="Langauefrancais.html">Français</a></div>
                     </a>
                 </div>
             </div>
+
+                               <button class="retour"><a href="parametreFrancais.html"> retour </button>
         </div>
+
 
 
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
