--- a/Alain Nkouka/html/ProfilA.html
+++ b/Alain Nkouka/html/ProfilA.html
@@ -141,17 +141,7 @@
             <!-- Button Paramètres code bootstrap -->
 
 
-
-            <div class="dropdown">
-                <button class="btn btn-secondary " type="button" data-bs-toggle="dropdown" aria-expanded="false">
-
-                    <a href="#">
-                        <img src="https://img.icons8.com/ios/50/000000/place-marker--v3.png" class="div6">
-                        <main class="localisation">Location</main>
-                    </a>
-                </button>
-            </div>
-        </nav> <!-- Button Localisation code bootstrap -->
+        </nav>
     </header>
 
 
