--- a/Alain Nkouka/html/connexionfrancais.html
+++ b/Alain Nkouka/html/connexionfrancais.html
@@ -235,9 +235,9 @@
 </body>
 
 
-<!-- <script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="../js/jquery-ui.min.js"></script>
 <script type="text/javascript" src="../js/connexionfrancais.js"></script>
- -->
+ 
 
 </html>
